--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "^3.0.1",
-    "react-tagsinput": "^3.19.0"
+    "react-spring": "^8.0.21",
+    "react-tagsinput": "^3.19.0",
+    "use-abortable-fetch": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
